src/test/ui/parser/macro/macro-repeat.stderr
error: variable 'v' is still repeating at this depth
  --> $DIR/macro-repeat.rs:3:9
   |
LL |         $v  //~ ERROR still repeating at this depth
   |         ^^

error: aborting due to previous error

